feel8voof5ahTie0wooteghaithahhie0ej

--- a/aws/cloudformation/challenges/devserver.yml
+++ b/aws/cloudformation/challenges/devserver.yml
@@ -183,7 +183,7 @@ Resources:
           - Effect: Allow
             Action:
             - sts:AssumeRole
-            Resource: "*"
+            Resource: arn:aws:iam::*:role/TheLastRole
 
   DevServerExecutionRole:
     Type: AWS::IAM::Role
