--- a/aws/cloudformation/challenges/flag.yml
+++ b/aws/cloudformation/challenges/flag.yml
@@ -26,7 +26,7 @@ Resources:
         - Effect: "Allow"
           Principal:
             AWS:
-            - "arn:aws:iam::${AWS::AccountId}:role/DevServerRole"
+            - !Sub "arn:aws:iam::${AWS::AccountId}:role/DevServerRole"
           Action:
           - "sts:AssumeRole"
       Policies:
